--- a/.github/workflows/main_gayannodeapp.yml
+++ b/.github/workflows/main_gayannodeapp.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: 'Deploy to Azure'
         env:
-          MY_VAL_STR: ${{ secrets.MY_VAL }}
+          MY_VAL: ${{ secrets.MY_VAL }}
         run: |
           # Example command to start the app
-          echo "The connection string is: $MY_VALgit" # Avoid printing sensitive info in real scenarios
+          echo "The connection string is: $MY_VAL" # Avoid printing sensitive info in real scenarios
